se agrego un producto al portfolio

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <div class="stats-item">
               <i class="bi bi-airplane"></i>
               <span data-purecounter-start="0" data-purecounter-end="12" data-purecounter-duration="1.5" class="purecounter"></span>
-              <p><strong>Humanitarian Missions</strong> <span>Emergency response deployments supporting disaster response worldwide</span></p>
+              <p><strong>Humanitarian Missions</strong><br><span>Emergency response deployments supporting disaster response worldwide</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -175,7 +175,7 @@
             <div class="stats-item">
               <i class="bi bi-geo-alt-fill"></i>
               <span data-purecounter-start="0" data-purecounter-end="7" data-purecounter-duration="1.5" class="purecounter"></span>
-              <p><strong>Countries Worked In</strong> <span>Experience in field operations across Panama, Costa Rica, Honduras, Peru, Hungary, Mozambique, and Paraguay, providing technical support and optimizing data workflows for humanitarian responses.</span></p>
+              <p><strong>Countries Worked In</strong><br><span>Experience in field operations across Panama, Costa Rica, Honduras, Peru, Hungary, Mozambique, and Paraguay, providing technical support and optimizing data workflows for humanitarian responses.</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -183,7 +183,7 @@
             <div class="stats-item">
               <i class="bi bi-graph-up"></i>
               <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1.5" class="purecounter"></span>
-              <p><strong>Dashboards Developed</strong> <span> 25+ custom dashboards for real-time monitoring and analysis.</span></p>
+              <p><strong>Dashboards Developed</strong><br><span> 25+ custom dashboards for real-time monitoring and analysis.</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -596,6 +596,17 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/dashboard1.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Natural Disasters: Analysis of Global Impact</h4>
+                  <p>This dashboard offers a global and dynamic vision of the social and economic impact of natural disasters worldwide.</p>
+                  <a href="assets/img/portfolio/dashboard1.png" title="Natural Disasters: Analysis of Global Impact" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://dashboard-disasters-cv-2020-2024.streamlit.app/" title="More Details" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/app-1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Epidemiological Index - COVID-19</h4>
@@ -622,7 +633,7 @@
                 <div class="portfolio-info">
                   <h4>Flood Response in Costa Rica – Affected Areas and Intervention Zones</h4>
                   <p>This map highlights the areas affected by floods in Costa Rica and the intervention zones where the Red Cross is actively responding.</p>
-                  <a href="assets/img/portfolio/map-1.png" title="Product 1" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/map-1.png" title="Flood Response in Costa Rica – Affected Areas and Intervention Zones" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -634,7 +645,7 @@
                 <div class="portfolio-info">
                   <h4>My Portfolio & Resume</h4>
                   <p>My professional journey, where data visualization, analytics, and business intelligence meet humanitarian action.</p>
-                  <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/branding-1.jpg" title="My Portfolio & Resume" data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -646,7 +657,7 @@
                 <div class="portfolio-info">
                   <h4>Immunization: Vaccines and Biologicals</h4>
                   <p>This dashboard provides a global overview of immunization coverage, vaccine distribution, and trends.</p>
-                  <a href="assets/img/portfolio/dashboard2.png" title="Dashboards 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/dashboard2.png" title="Immunization: Vaccines and Biologicals" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://public.tableau.com/views/Immunization_Vaccines_and_Biologicals/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -657,7 +668,7 @@
                 <div class="portfolio-info">
                   <h4>Mental Health and Psychosocial Support (MHPSS) Capacities of National Societies in the Americas</h4>
                   <p>This dashboard provides a comprehensive overview of the Mental Health and Psychosocial Support (MHPSS) capacities across National Societies in the Americas region.</p>
-                  <a href="assets/img/portfolio/dashboard4.png" title="Dashboards 2" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/dashboard4.png" title="Mental Health and Psychosocial Support (MHPSS) Capacities of National Societies in the Americas" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://app.powerbi.com/view?r=eyJrIjoiZDc5M2Y0ODctNjU5ZC00NTE0LTkzMzItYTZlMDQ4Y2RhOTBjIiwidCI6ImEyYjUzYmU1LTczNGUtNGU2Yy1hYjBkLWQxODRmNjBmZDkxNyIsImMiOjh9&pageName=ReportSection5787d19eb8efed95fe37" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -668,7 +679,7 @@
                 <div class="portfolio-info">
                   <h4>Dengue Outbreak Response in Panama – 2024</h4>
                   <p>This map highlights the intervention areas for the 2024 dengue outbreak in Panama.</p>
-                  <a href="assets/img/portfolio/map-2.png" title="Product 2" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/map-2.png" title="e Outbreak Response in Panama – 2024" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://public.tableau.com/views/Dengue_panama_2024/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -680,7 +691,7 @@
                 <div class="portfolio-info">
                   <h4>Impact of Natural Disasters in Latin America and the Caribbean (2010-2019)</h4>
                   <p>This interactive dashboard provides a detailed analysis of natural disasters that impacted Latin America and the Caribbean between 2010 and 2019.</p>
-                  <a href="assets/img/portfolio/Dashboard5.png" title="App 3" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/Dashboard5.png" title="Impact of Natural Disasters in Latin America and the Caribbean (2010-2019)" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://public.tableau.com/views/DisasterEventsinAmericas2010-2019/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
@@ -692,7 +703,7 @@
                 <div class="portfolio-info">
                   <h4>Dengue Epidemic in Honduras</h4>
                   <p>This map illustrates the areas affected by the dengue epidemic in Honduras, with a focus on intervention zones where the Red Cross is actively responding.</p>
-                  <a href="assets/img/portfolio/map-3.png" title="Product 3" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/map-3.png" title="Dengue Epidemic in Honduras" data-gallery="portfolio-gallery-product" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://public.tableau.com/views/honduras_dengue_2024/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
