--- a/index.html
+++ b/index.html
@@ -596,6 +596,20 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
+                <img src="assets/img/portfolio/dashboard6.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Immunization Coverage Dashboard</h4>
+                  <p>This interactive dashboard provides a comprehensive view of immunization coverage data by country and year.</p>
+                  <a href="assets/img/portfolio/dashboard6.png" title="Natural Disasters: Analysis of Global Impact" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://dashboard-immunization-coverage-cv.streamlit.app/" title="More Details" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+          <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="200">
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+              <div class="portfolio-content h-100">
                 <img src="assets/img/portfolio/dashboard1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Natural Disasters: Analysis of Global Impact</h4>
