--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 <div class="portfolio-info">
                   <h4>Immunization Coverage Dashboard</h4>
                   <p>This interactive dashboard provides a comprehensive view of immunization coverage data by country and year.</p>
-                  <a href="assets/img/portfolio/dashboard6.png" title="Natural Disasters: Analysis of Global Impact" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/portfolio/dashboard6.png" title="Immunization Coverage Dashboard" data-gallery="portfolio-gallery-app" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://dashboard-immunization-coverage-cv.streamlit.app/" title="More Details" class="details-link" target="_blank"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
