--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
         <h3 class="resume-title">Professional Experience</h3>
         <div class="resume-item">
           <h4>Data Management Consultant</h4>
-          <h5>11/2024 - 02/2025</h5>
+          <h5>11/2024 - Present</h5>
           <p><em>International Organization for Migration (IOM) - Panama City, Panama</em></p>
           <ul>
             <li>
